--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,7 @@
 npm-debug.log
 yarn-error.log
 
+
 # IDEs and editors
 .idea/
 .project
@@ -36,7 +37,8 @@ yarn-error.log
 /libpeerconnection.log
 testem.log
 /typings
-
+src/environments
+.circleci
 # System files
 .DS_Store
 Thumbs.db
